Style: Change background color

--- a/Tracker/templates/index.html
+++ b/Tracker/templates/index.html
@@ -5,7 +5,7 @@
 
     {% include "include/IncludeHead.html" %}
 
-<body>
+<body class="bg-cyan-100/50">
     
     {% include "include/Landing/HeroBanner.html" %}
 
