Feat: create nav add name

--- a/Tracker/templates/include/IncludeHead.html
+++ b/Tracker/templates/include/IncludeHead.html
@@ -9,4 +9,15 @@
     <link rel="shortcut icon" type="x-icon" href="{% static 'Image/Logo/Fav Icon.png' %}">
     <link rel="stylesheet" href="{% static 'src/dist/style.css' %}">
 
+    <!-- FONT -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
+
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="{% static 'font/font.css' %}">
+
 </head>
