--- a/Tracker/templates/include/Landing/HeroBanner.html
+++ b/Tracker/templates/include/Landing/HeroBanner.html
@@ -1,8 +1,12 @@
 <div>
 
-    <div>
+    <div class="NavBar w-full h-30 bg-white">
 
-        
+        <div>
+
+            <p class="text-4xl fjalla_one_regular">TAT - Tracker<span class="text-sky-500">.</span></p>
+
+        </div>
 
     </div>
 
