Feat: add ul lists

--- a/Tracker/templates/include/Landing/HeroBanner.html
+++ b/Tracker/templates/include/Landing/HeroBanner.html
@@ -1,10 +1,22 @@
 <div>
 
-    <div class="NavBar w-full h-30 bg-white">
+    <div class="NavBar w-full h-30 bg-white flex justify-between items-center">
 
-        <div>
+        <div class="w-1/3 flex justify-center">
 
             <p class="text-4xl fjalla_one_regular">TAT - Tracker<span class="text-sky-500">.</span></p>
+
+        </div>
+
+        <div class="w-2/3">
+
+            <ul class="flex justify-evenly">
+
+                <li>Home</li>
+                <li>Get qr</li>
+                <li>Fill Attendance</li>
+
+            </ul>
 
         </div>
 
