--- a/Tracker/templates/include/Landing/HeroBanner.html
+++ b/Tracker/templates/include/Landing/HeroBanner.html
@@ -8,7 +8,7 @@
 
         </div>
 
-        <div class="w-2/3">
+        <div class="w-3/5">
 
             <ul class="flex justify-evenly">
 
@@ -17,6 +17,13 @@
                 <li>Fill Attendance</li>
 
             </ul>
+
+        </div>
+
+        <div class="w-2/5 flex justify-center items-center">
+
+            <button>Sign up</button>
+            <button>Sign in</button>
 
         </div>
 
