--- a/Tracker/templates/include/Landing/HeroBanner.html
+++ b/Tracker/templates/include/Landing/HeroBanner.html
@@ -2,15 +2,15 @@
 
     <div class="NavBar w-full h-30 bg-white flex justify-between items-center">
 
-        <div class="w-1/3 flex justify-center">
+        <div class="w-3/5 flex justify-center items-center">
 
-            <p class="text-4xl fjalla_one_regular">TAT - Tracker<span class="text-sky-500">.</span></p>
+            <div class="w-1/3 flex justify-center">
 
-        </div>
+                <p class="text-4xl fjalla_one_regular">TAT - Tracker<span class="text-sky-500">.</span></p>
 
-        <div class="w-3/5">
+            </div>
 
-            <ul class="flex justify-evenly">
+            <ul class="flex justify-center items-center bree_serif_regular gap-16">
 
                 <li>Home</li>
                 <li>Get qr</li>
@@ -20,10 +20,10 @@
 
         </div>
 
-        <div class="w-2/5 flex justify-center items-center">
+        <div class="w-2/5 flex justify-center items-center gap-8">
 
-            <button>Sign up</button>
-            <button>Sign in</button>
+            <button class="w-50 h-15 bg-linear-to-bl from-violet-500 to-fuchsia-500 text-white fjalla_one_regular text-2xl rounded-full">Sign up</button>
+            <button class="w-50 h-15 bg-indigo-300/40 text-2xl rounded-full">Sign in</button>
 
         </div>
 
