--- a/Tracker/templates/include/IncludeHead.html
+++ b/Tracker/templates/include/IncludeHead.html
@@ -18,6 +18,9 @@
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
 
+     <!-- Icon -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+
     <link rel="stylesheet" href="{% static 'font/font.css' %}">
 
 </head>
