Feat: Add signUp on forms

--- a/Tracker/templates/include/authentication/signUp.html
+++ b/Tracker/templates/include/authentication/signUp.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 
+    <title>TAT - SignUp</title>
     {% include "include/IncludeHead.html" %}
 
 <body>
     
+    <div>
+
+        <div>
+            <img src="" alt="">
+        </div>
+
+        <div>
+
+            
+
+        </div>
+
+    </div>
+
 </body>
 </html>
