Style: finish designing

--- a/Tracker/templates/include/authentication/signUp.html
+++ b/Tracker/templates/include/authentication/signUp.html
@@ -14,7 +14,17 @@
             <img class="w-screen h-screen object-cover" src="{% static 'Image/SignUp/Signup.jpg' %}" alt="">
         </div>
 
-        <div class="w-2/5 h-3/4 flex justify-center items-start">
+        <div class="w-2/5 h-3/4 flex flex-col justify-start items-center">
+
+            <div class="w-3/4 p-6 text-start">
+
+                <p class="text-4xl fjalla_one_regular text-start">TAT - Sign Up</p>
+                <div class="flex justify-start items-center gap-2 p-2">
+                    <i class="fa-solid fa-arrow-right-to-bracket text-green-600 text-2xl"></i>
+                    <p class="text-sm text-green-600 fjalla_one_regular">Teachers Attendance Tracker SignUp Page</p>
+                </div>
+
+            </div>
 
             <form class="w-3/4 grid grid-flow-col grid-rows-4 gap-4" method="post">
 
