Feat: add image on sig in

--- a/Tracker/templates/include/authentication/signIn.html
+++ b/Tracker/templates/include/authentication/signIn.html
@@ -1,10 +1,20 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
     <title>TAT - SignIn</title>
     {% include "include/IncludeHead.html" %}
 
-<body>
+<body class="h-screen bg-cover bg-center" style="background-image: url('{% static 'Image/SignIn/SignIn.jpg' %}');">
+
+    <div class="w-full h-screen">
+
+        <div>
+
+        </div>
+
+    </div>
     
 </body>
 </html>
