--- a/Tracker/templates/include/authentication/signUp.html
+++ b/Tracker/templates/include/authentication/signUp.html
@@ -26,7 +26,7 @@
 
             </div>
 
-            <form class="w-3/4 grid grid-flow-col grid-rows-5 gap-4" method="post">
+            <form class="w-3/4 grid grid-flow-col grid-rows-7 gap-4" method="post">
 
                 {% csrf_token %}
                 <div class="flex justify-evenly items-center gap-4">
@@ -45,6 +45,12 @@
                 <div class="flex justify-evenly items-center gap-4">
 
                     {{ Form.username }}
+
+                </div>
+
+                <div>
+
+                    {{ Form.subject_field }}
 
                 </div>
 
