--- a/Tracker/templates/include/authentication/signUp.html
+++ b/Tracker/templates/include/authentication/signUp.html
@@ -69,6 +69,10 @@
                     </div>
                 </div>
 
+                <div class="text-center">
+                    <a href="{% url 'SignIn' %}"><p class="bree_serif_regular cursor-pointer underline underline-offset-2">I have an account</p></a>
+                </div>
+
             </form>
 
         </div>
