Feat: Start New Future - Time Table

--- a/Tracker/templates/include/Landing/HeroBanner.html
+++ b/Tracker/templates/include/Landing/HeroBanner.html
@@ -17,7 +17,7 @@
 
                 <li>Home</li>
                 <li>Get qr</li>
-                <li>Fill Attendance</li>
+                <li>Time Table</li>
 
             </ul>
 
