--- a/Tracker/templates/include/Landing/HeroBanner.html
+++ b/Tracker/templates/include/Landing/HeroBanner.html
@@ -1,7 +1,6 @@
 {% load static %}
 
-<div class="w-full grid grid-rows-[120px_1fr_120px] h-screen">
-
+<div class="w-full grid grid-flow-col grid-rows-[120px_1fr_120fr] h-screen">
 
     <div class="NavBar w-full h-[120px] bg-white flex justify-between items-center">
 
@@ -51,7 +50,7 @@
 
     </div>
 
-    <div class="w-full flex justify-center items-center">
+    <div class="w-full h-full flex justify-center items-center">
 
         <div class="w-2/5">
 
