--- a/Tracker/templates/include/Landing/HeroBanner.html
+++ b/Tracker/templates/include/Landing/HeroBanner.html
@@ -1,94 +1,106 @@
 {% load static %}
 
-<div class="w-full grid grid-flow-col grid-rows-[120px_1fr_120fr] h-screen">
+<div class="relative">
 
-    <div class="NavBar w-full h-[120px] bg-white flex justify-between items-center">
+    <div class="w-full h-screen grid grid-flow-col grid-rows-[120px_1fr_120px]">
 
-        <div class="w-3/5 flex justify-center items-center">
+        <div class="NavBar w-full h-[120px] bg-white flex justify-between items-center">
 
-            <div class="w-1/3 flex justify-center">
+            <div class="w-3/5 flex justify-center items-center">
 
-                <p class="text-4xl fjalla_one_regular">TAT - Tracker<span class="text-sky-500">.</span></p>
+                <div class="w-1/3 flex justify-center">
+
+                    <p class="text-4xl fjalla_one_regular">TAT - Tracker<span class="text-sky-500">.</span></p>
+
+                </div>
+
+                <ul class="flex justify-center items-center bree_serif_regular gap-16">
+
+                    <li>Home</li>
+                    <li>Get qr</li>
+                    <li>Fill Attendance</li>
+
+                </ul>
 
             </div>
 
-            <ul class="flex justify-center items-center bree_serif_regular gap-16">
+            <div class="w-2/5 flex justify-center items-center gap-8">
 
-                <li>Home</li>
-                <li>Get qr</li>
-                <li>Time Table</li>
+                {% if request.user.is_authenticated %}
+                    <p class="text-2xl fjalla_one_regular">Teacher <span class="bg-green-600 text-white p-1">{{ request.user.first_name }} {{ request.user.last_name }}</span></p>
+                    {% if request.user.profile.teachers_field %}
+                        <p class="text-2xl fjalla_one_regular">{{ request.user.profile.teachers_field }}</p>
+                    {% else %}
+                        <p class="text-2xl fjalla_one_regular">None Subject</p>
+                    {% endif %}
 
-            </ul>
-
-        </div>
-
-        <div class="w-2/5 flex justify-center items-center gap-8">
-
-            {% if request.user.is_authenticated %}
-                <p class="text-2xl fjalla_one_regular">Teacher <span class="bg-green-600 text-white p-1">{{ request.user.first_name }} {{ request.user.last_name }}</span></p>
-                {% if request.user.profile.teachers_field %}
-                    <p class="text-2xl fjalla_one_regular">{{ request.user.profile.teachers_field }}</p>
+                    {% if request.user.is_staff  %}
+                        <p class="text-2xl fjalla_one_regular"><span class="bg-green-600 text-white p-1">Admin</span></p>
+                    {% endif %}
+                    <div>
+                        <form action="{% url 'Logout' %}" method="post">
+                            {% csrf_token %}
+                            <button type="submit" class="bree_serif_regular cursor-pointer">Logout</button>
+                        </form>
+                    </div>
                 {% else %}
-                    <p class="text-2xl fjalla_one_regular">None Subject</p>
+                    <a href="{% url 'SignUp' %}"><button class="cursor-pointer w-50 h-15 bg-linear-to-bl from-violet-500 to-fuchsia-500 text-white fjalla_one_regular text-2xl rounded-full">Sign up</button></a>
+                    <a href="{% url 'SignIn' %}"><button class="w-50 h-15 bg-indigo-300/40 text-2xl rounded-full fjalla_one_regular">Sign in</button></a>
                 {% endif %}
-
-                {% if request.user.is_staff  %}
-                    <p class="text-2xl fjalla_one_regular"><span class="bg-green-600 text-white p-1">Admin</span></p>
-                {% endif %}
-                <div>
-                    <form action="{% url 'Logout' %}" method="post">
-                        {% csrf_token %}
-                        <button type="submit" class="bree_serif_regular cursor-pointer">Logout</button>
-                    </form>
-                </div>
-            {% else %}
-                <a href="{% url 'SignUp' %}"><button class="cursor-pointer w-50 h-15 bg-linear-to-bl from-violet-500 to-fuchsia-500 text-white fjalla_one_regular text-2xl rounded-full">Sign up</button></a>
-                <a href="{% url 'SignIn' %}"><button class="w-50 h-15 bg-indigo-300/40 text-2xl rounded-full fjalla_one_regular">Sign in</button></a>
-            {% endif %}
-
-        </div>
-
-    </div>
-
-    <div class="w-full h-full flex justify-center items-center">
-
-        <div class="w-2/5">
-
-            <p class="text-green-600 text-2xl fjalla_one_regular"><i class="fa-solid fa-circle-check"></i> Save Your Time</p>
-            <p class="text-7xl bree_serif_regular">Simplify Teacher <span class="bg-green-600/30 text-white"> Attendance Tracking </span> with Confidence.</p>
-            
-            <div class="p-5">
-
-                <p class="bree_serif_regular">A simple and reliable attendance tool made for teachers.</p>
-
-            </div>
-
-            <div class="mt-8">
-
-                <div class="w-full h-15 rounded-full bg-white shadow-2xl shadow-blue-500/50 flex justify-evenly items-center">
-
-                    <p class="text-green-600 fjalla_one_regular text-2xl"><i class="fa-solid fa-chart-simple"></i> Simple</p>
-                    <p class="text-green-600 fjalla_one_regular text-2xl"><i class="fa-solid fa-business-time"></i> Save Time</p>
-                    <p class="text-green-600 fjalla_one_regular text-2xl"><i class="fa-solid fa-bolt"></i> Fast</p>
-
-                </div>
 
             </div>
 
         </div>
 
-        <div class="w-2/5">
-            <img class="w-full" src="{% static 'Image/HeroIMG/DATAANA.png' %}" alt="">
+        <div class="w-full h-full flex justify-center items-center">
+
+            <div class="w-2/5">
+
+                <p class="text-green-600 text-2xl fjalla_one_regular"><i class="fa-solid fa-circle-check"></i> Save Your Time</p>
+                <p class="text-7xl bree_serif_regular">Simplify Teacher <span class="bg-green-600/30 text-white"> Attendance Tracking </span> with Confidence.</p>
+                
+                <div class="p-5">
+
+                    <p class="bree_serif_regular">A simple and reliable attendance tool made for teachers.</p>
+
+                </div>
+
+                <div class="mt-8">
+
+                    <div class="w-full h-15 rounded-full bg-white shadow-2xl shadow-blue-500/50 flex justify-evenly items-center">
+
+                        <p class="text-green-600 fjalla_one_regular text-2xl"><i class="fa-solid fa-chart-simple"></i> Simple</p>
+                        <p class="text-green-600 fjalla_one_regular text-2xl"><i class="fa-solid fa-business-time"></i> Save Time</p>
+                        <p class="text-green-600 fjalla_one_regular text-2xl"><i class="fa-solid fa-bolt"></i> Fast</p>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="w-2/5">
+                <img class="w-full" src="{% static 'Image/HeroIMG/DATAANA.png' %}" alt="">
+            </div>
+
+        </div>
+
+        <div class="NavBar w-full h-[120px] bg-white flex justify-center items-center">
+
+            <div class="flex justify-center items-center">
+
+                <p class="text-4xl fjalla_one_regular">Trusted by <span class="p-2 bg-green-600/90 text-white">Kokebe Tsibah Secondary School</span></p>
+
+            </div>
+
         </div>
 
     </div>
 
-    <div class="NavBar w-full h-[120px] bg-white flex justify-center items-center">
-
-        <div class="flex justify-center items-center">
-
-            <p class="text-4xl fjalla_one_regular">Trusted by <span class="p-2 bg-green-600/90 text-white">Kokebe Tsibah Secondary School</span></p>
-
+    <div class="w-[700px] absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2">
+        
+        <div class="w-full h-5/3 bg-green-600">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni tenetur officiis quas nemo dolorem, hic id saepe, ea perspiciatis deserunt assumenda sequi maxime voluptate asperiores nobis libero. Tempore, vero temporibus?</p>
         </div>
 
     </div>
