Style: Custom Model

--- a/Tracker/templates/include/IncludeHead.html
+++ b/Tracker/templates/include/IncludeHead.html
@@ -26,4 +26,6 @@
 
     <link rel="stylesheet" href="{% static 'font/font.css' %}">
 
+    <script src="{% static 'Script/Function.js' %}"></script>
+
 </head>
