--- a/Tracker/templates/include/Landing/HeroBanner.html
+++ b/Tracker/templates/include/Landing/HeroBanner.html
@@ -18,7 +18,7 @@
 
                     <li>Home</li>
                     <li>Get qr</li>
-                    <li>Fill Attendance</li>
+                    <button id="openTimeTable">Time Table</button>
 
                 </ul>
 
@@ -97,7 +97,7 @@
 
     </div>
 
-    <div class="w-[700px] absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2">
+    <div class="w-[700px] absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 AttendanceModel">
         
         <div class="w-full h-5/3 bg-green-600">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magni tenetur officiis quas nemo dolorem, hic id saepe, ea perspiciatis deserunt assumenda sequi maxime voluptate asperiores nobis libero. Tempore, vero temporibus?</p>
