--- a/static/Design/DesignCSS.css
+++ b/static/Design/DesignCSS.css
@@ -2,3 +2,21 @@
 .AttendanceModel {
     display: none;
 }
+
+.AttendanceModel_on {
+    display: block;
+    animation-name: TimeAnimate;
+    animation-duration: 0.7s;
+    animation-timing-function: cubic-bezier(0.95, 0.05, 0.795, 0.035);
+}
+
+@keyframes TimeAnimate {
+    from {
+        transform: translateY(20px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
