feat: create new model field to contain classroom

--- a/Tracker/templates/include/Landing/HeroBanner.html
+++ b/Tracker/templates/include/Landing/HeroBanner.html
@@ -16,9 +16,8 @@
 
                 <ul class="flex justify-center items-center bree_serif_regular gap-16">
 
-                    <li>Home</li>
-                    <li>Get qr</li>
-                    <button id="openTimeTable">Time Table</button>
+                    <button class="cursor-pointer" id="openFillAttendance">Fill Attendance</button>
+                    <button class="cursor-pointer" id="openTimeTable">Time Table</button>
 
                 </ul>
 
@@ -138,6 +137,10 @@ It keeps classes organized and helps teachers stay punctual, prepared, and focus
 
             </div>
             
+        </div>
+
+        <div class="w-full p-4 rounded-sm h-5/3 bg-white AttendanceModel FillAttendanceModel">
+            <p>Hello World</p>
         </div>
 
     </div>
