--- a/Tracker/templates/include/authentication/signUp.html
+++ b/Tracker/templates/include/authentication/signUp.html
@@ -65,7 +65,7 @@
                     <button class="cursor-pointer w-1/2 bg-green-600 text-white fjalla_one_regular h-[50px] text-xl rounded-sm" type="submit">Sign Up <i class="fa-solid fa-arrow-right"></i></button>
 
                     <div class="">
-                        <a class="text-green-600" href="{% url 'Index' %}">Cancle</a>
+                        <a class="text-green-600" href="{% url 'SignIn' %}">Cancle</a>
                     </div>
                 </div>
 
